# docx_redline

./: .gitignore  README.md  install.sh  pyproject.toml  run.command  setup.sh  update.command  update.sh
docx_redline/: __init__.py  cli.py  cli_interactive.py  differ.py  doc_walk.py  formatter.py  gui.py  paths.py
